Fix for doc typeahead field being hidden
When typing a doc name in the Doc ID field on the Database -> All
Docs page, it would get cut off. This PR ensures it overlaps
the body content.

--- a/assets/less/fauxton.less
+++ b/assets/less/fauxton.less
@@ -314,8 +314,10 @@ div.spinner {
 }
 
 #header-search {
-  position: relative;
   height: @collapsedNavWidth;
+  span {
+    position: relative;
+  }
 }
 
 .api-bar-tray {
@@ -517,7 +519,7 @@ body #dashboard .flex-body#breadcrumbs {
     margin: 0;
   }
   .searchbox-container {
-    margin: 12px;
+    padding: 12px;
     input[type="text"] {
       .border-radius(5px);
       font-size: 13px;
@@ -529,7 +531,7 @@ body #dashboard .flex-body#breadcrumbs {
       border: none;
       position: absolute;
       right: 12px;
-      top: 0px;
+      top: 0;
       height: @collapsedNavWidth;
       z-index: 2;
       color: #999;
@@ -537,6 +539,9 @@ body #dashboard .flex-body#breadcrumbs {
         position: absolute;
         top: 11px;
       }
+    }
+    form {
+      margin: 0;
     }
   }
 }
